# sentry-conventions

./: .craft.env  .craft.yml  .envrc  .git-blame-ignore-revs  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY_TEST_README.md  biome.json  find_pii_false_attributes.js  package.json  preload.c  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
data/: deprecated_attributes.json
devenv/: config.ini  sync.py
docs/: README.md  astro.config.mjs  package.json  tailwind.config.mjs  wrangler.jsonc
php/: README.md  composer.json
python/: README.md  pyproject.toml
python/src/: main.py
python/src/sentry_conventions/: __init__.py  attributes.py  main.py  migrations.py  op.py
python/tests/: test_attribute_keys.py  test_imports.py  test_migrations.py  test_smoke.py
rust/: Cargo.toml
schemas/: attribute.schema.json  attribute_transformation.schema.json  description.schema.json  measurements.schema.json  name.schema.json  op.schema.json
scripts/: attribute_examples.ts  bump_attribute_changelog.ts  clear_attribute_changelog.ts  common.ts  craft-pre-release.sh  create_attribute.ts  generate.ts  generate_attribute_changelog.ts  generate_attribute_docs.ts  generate_attributes.ts  generate_deprecated_attributes_json.ts  generate_name_docs.ts  generate_op.ts  gzip_folder.ts  types.ts  utils.ts
shared/: deprecated_attributes.json
test/: attribute-migrations.test.ts  attribute-transformations.test.ts  attribute-utils.test.ts  attributes.test.ts  description.test.ts  merge-changelogs.test.ts  (+6 more)
(+1246 files in other folders)
