[project]
name = "sentry-conventions"
version = "0.1.1"
description = "Sentry Semantic Conventions"
license = { "text" = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://sentry.io"
Repository = "https://github.com/getsentry/sentry-conventions.git"
Issues = "https://github.com/getsentry/sentry-conventions/issues"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pyflakes>=3.2.0",
    "pytest>=8.0.0",
]
